--- a/player/templates/player/redesign/profile_new.html
+++ b/player/templates/player/redesign/profile_new.html
@@ -180,7 +180,7 @@
 						<span>{% trans 'рамки' context "profile" %}</span>
 					</a>
 
-					<a href='##' class="profile__gridBtn profile__gridBtn--disabled">
+					<a href='/plane_select' class="profile__gridBtn">
 						<img src="{{ plane_url }}" alt="">
 						<svg class='profile__outerLinkSvg' xmlns="http://www.w3.org/2000/svg" width="24" height="24"
 							viewBox="0 0 24 24">
