--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -8535,6 +8535,8 @@ p.overview__love-stat-timer {
 .box__modalGrid img {
 	object-fit: contain;
 	object-position: center;
+    width: 100%;
+	height: 100%;
 }
 
 .box__picOpen,
