--- a/player/templates/player/redesign/profile_new.html
+++ b/player/templates/player/redesign/profile_new.html
@@ -153,7 +153,7 @@
 						<span>{% trans 'настройки' context "profile" %}</span>
 					</button>
 
-					<a href='##' class="profile__gridBtn profile__gridBtn--disabled">
+					<a href='/border_select/' class="profile__gridBtn">
 						{% if ava_border %}
 							{% if png_use %}
 						<img width="40" height="40" src="{{ ava_border.image.url }}">
