--- a/player/templates/player/redesign/view_profile_new.html
+++ b/player/templates/player/redesign/view_profile_new.html
@@ -72,7 +72,7 @@
 						<span>{% trans 'инфо' context "profile" %}</span>
 					</button>
 
-					<a href='##' class="profile__gridBtn profile__gridBtn--disabled">
+					<a href='/view_borders/{% localize off %}{{ char.pk }}{% endlocalize %}' class="profile__gridBtn">
 						{% if ava_border %}
 							{% if png_use %}
 						<img width="40" height="40" src="{{ ava_border.image.url }}">
@@ -99,7 +99,7 @@
 						<span>{% trans 'рамки' context "profile" %}</span>
 					</a>
 
-					<a href='##' class="profile__gridBtn profile__gridBtn--disabled">
+					<a href='/view_planes/{% localize off %}{{ char.pk }}{% endlocalize %}' class="profile__gridBtn">
 						<img src="{{ plane_url }}" alt="">
 						<svg class='profile__outerLinkSvg' xmlns="http://www.w3.org/2000/svg" width="24" height="24"
 							viewBox="0 0 24 24">
