--- a/storage/templates/storage/redesign/storage_blocks/avia_box.html
+++ b/storage/templates/storage/redesign/storage_blocks/avia_box.html
@@ -688,7 +688,7 @@
             </svg>
         </button>
 
-        <h1 class="box__title ct__page-title">Особенные самолёты</h1>
+        <h1 class="box__title ct__page-title">Особые самолёты</h1>
 
         <div class="box__modalGrid">
             {% for plane in rare_list %}
