--- a/player/templates/player/redesign/overview.html
+++ b/player/templates/player/redesign/overview.html
@@ -397,7 +397,7 @@
         {% else %}
           {% if has_event %}
           <!--Блок ИВЕНТ-->
-          <a href="/new_year/" class="overview__event">
+          <a href="/summer_festival/" class="overview__event">
             <!--сообщение что войн нет-->
             {% if has_event.type == 'hl' %}
             <p class="overview__war-no event">Тыквенный спас</p>
@@ -562,6 +562,43 @@
               <path d="M23.5649 11.5897C23.6853 11.6231 23.8057 11.6565 23.8514 11.7317C23.8971 11.8068 23.8682 11.9236 23.8392 12.0405" stroke="#FFF7B2" stroke-width="0.639874" stroke-miterlimit="22.9256" stroke-linecap="round"/>
               <path fill-rule="evenodd" clip-rule="evenodd" d="M24.0902 11.3589C24.0963 11.309 24.1863 11.2591 24.2266 11.1872C24.2669 11.1152 24.2574 11.0211 24.2948 11C24.3321 10.9789 24.4163 11.0307 24.5014 11.0329C24.5865 11.0352 24.6725 10.9879 24.7155 11.0091C24.7585 11.0304 24.7586 11.1201 24.7989 11.187C24.8392 11.254 24.9197 11.2983 24.9232 11.3466C24.9267 11.3948 24.8533 11.4471 24.8134 11.519C24.7736 11.591 24.7674 11.6827 24.7214 11.71C24.6753 11.7372 24.5893 11.7001 24.5047 11.7015C24.4201 11.7029 24.3367 11.7427 24.2928 11.717C24.2488 11.6913 24.2443 11.6001 24.2031 11.5295C24.162 11.4589 24.0841 11.4089 24.0902 11.3589V11.3589Z" fill="#FFF7B2" stroke="#FFF7B2" stroke-width="0.639874" stroke-miterlimit="22.9256" stroke-linecap="round"/>
               </svg>
+            {% elif has_event.type == 'su' %}
+            <p class="overview__war-no event">{% trans 'Летний фестиваль' context "overview" %}</p>
+            <!--иконка пальмы-->
+            <svg
+               width="34"
+               height="34"
+               viewBox="0 0 34 34"
+               class="overview__war-icon"
+               fill="none"
+               version="1.1"
+               id="svg1"
+               xmlns="http://www.w3.org/2000/svg"
+               xmlns:svg="http://www.w3.org/2000/svg">
+              <defs
+                 id="defs1" />
+              <circle
+                 cx="17"
+                 cy="17"
+                 r="16.5"
+                 stroke="var(--c10two)"
+                 id="circle1" />
+              <path
+                 class="cls-1"
+                 d="m 15.988752,13.102249 c 2.010178,6.074023 1.106565,11.940263 -0.835964,18.362202 l 3.911633,-0.405902 c 1.485888,-9.58217 0.210199,-13.718497 -1.273274,-17.458588 l -1.802395,-0.502544 z"
+                 id="path1"
+                 style="fill:#8c5229;fill-rule:evenodd;stroke-width:0.241608" />
+              <path
+                 class="cls-2"
+                 d="M 9.9775476,26.347195 C 10.501838,20.183777 11.576993,15.112427 15.988752,13.102249 l 1.802395,0.502545 c 2.722921,1.705752 5.146249,5.402352 7.470517,11.268592 3.252042,-6.071606 1.179047,-10.529272 -6.552407,-13.428568 4.421425,-1.374749 8.565002,0.381742 12.466969,3.822238 C 29.093565,7.405134 23.152427,5.5109287 17.844301,9.9951714 18.569125,4.370539 16.247273,3.0199512 13.142613,1.7805021 14.592259,4.0081272 15.708488,6.3275629 15.544194,8.9973309 10.76519,4.5976502 6.7496666,6.2236719 3.0675616,10.101478 6.6022856,9.2775951 10.267478,8.9248485 13.355226,10.997844 7.8103246,10.29718 4.7080796,13.413924 2.7921286,17.521258 c 2.31702,-2.12615 4.505988,-3.503315 6.823007,-3.754588 -2.432992,4.416593 -1.357837,8.308897 0.369661,12.59019 v 0 z"
+                 id="path2"
+                 style="fill:#3e9c2a;fill-rule:evenodd;stroke-width:0.241608" />
+              <path
+                 class="cls-3"
+                 d="M 17.844301,9.9951714 C 23.374706,8.5914289 27.991833,9.8260454 31.176226,15.26464 29.905368,9.1930323 24.275903,4.6363077 17.844301,9.9951714 Z m 0.864956,1.4496466 c 7.277231,2.882383 9.934918,6.42194 6.552407,13.428568 1.304683,-6.615224 -2.118901,-10.046056 -6.552407,-13.428568 z m -2.720505,1.657431 C 10.356873,13.252046 8.4844116,18.900839 9.9847966,26.35686 6.5442996,19.007146 7.9262966,9.8961114 15.988752,13.102249 Z M 2.7921286,17.523674 C 5.0294176,12.273534 10.458348,9.0673969 15.838956,11.911122 9.8664076,10.074901 6.2906116,13.488821 2.7921286,17.523674 Z M 15.544194,8.9973309 15.512786,10.688586 C 12.214839,6.8542687 6.6578566,7.864189 3.0627306,10.101478 6.7979886,5.938574 11.197669,4.9407339 15.544194,8.9973309 Z"
+                 id="path3"
+                 style="fill:#3bae39;fill-rule:evenodd;stroke-width:0.241608" />
+            </svg>
             {% endif %}
           </a>
           {% endif %}
